--- a/Index.css
+++ b/Index.css
@@ -29,15 +29,16 @@ header {
 
 #menu a {
   font-size: 15px;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   padding: 10px;
-  background-color: rgba(77, 10, 80, 0.664);
+  background-color: rgba(255, 255, 255, 0.664);
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 #menu a:hover {
-  color: rgb(0, 0, 0);
-  background-color: rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
+  font-style: bold;
+  background-color: rgb(77, 10, 80, 0.664);
   border-radius: 5px;
 }
 
@@ -59,7 +60,7 @@ header {
 
 .nav-links a {
   text-decoration: none;
-  color: white;
+  color: rgb(255, 255, 255);
   margin-left: 20px;
   font-size: 18px;
 }
@@ -404,6 +405,7 @@ img {vertical-align: middle;}
     display:block; /* Show burger menu */
     cursor:pointer;
     margin-right: 20px;
+    margin-top: 10px;
     font-size: 30px;  
     color: white;
     display: block;
@@ -420,14 +422,14 @@ img {vertical-align: middle;}
 }
 
 .nav-links a {
-    margin: 10px 0;
+    margin: 5px 0;
     padding: 10px;
     width: 100%;
-   
 }
 
 .nav-links.active {
     display: flex; /* Show nav links when active */
+    background-color: rgb(255, 255, 255);
 }
 
   .chisono, .info {
@@ -530,6 +532,7 @@ img {vertical-align: middle;}
     display:block; /* Show burger menu */
     cursor:pointer;
     margin-right: 20px;
+    margin-top: 10px;
     font-size: 30px;  
     color: white;
   
@@ -554,6 +557,7 @@ img {vertical-align: middle;}
 
 .nav-links.active {
   display: flex; /* Show nav links when active */
+  background-color: rgb(255, 255, 255);
 }
 
 .chisono, .info {
