--- a/Index.css
+++ b/Index.css
@@ -543,6 +543,7 @@ img {vertical-align: middle;}
     font-weight: 500;
     font-style: italic;
     font-optical-sizing: auto;
+    font-size: 18px;
     align-items: column;
   }
 
@@ -704,7 +705,8 @@ img {vertical-align: middle;}
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 500;
     font-style: italic;
-    font-optical-sizing: auto;
+    font-size: 16px;
     align-items: column;
+    font-optical-sizing: auto
   }
 }
