--- a/Index.css
+++ b/Index.css
@@ -548,6 +548,22 @@ img {vertical-align: middle;}
 
   .prev, .next,.text {font-size: 11px}
 
+  #submit {
+    background-color: #fff;
+    border-radius: 5px;
+    font-size: 15px;
+    position: static;
+    width: 50%;
+    padding: 5px;
+    cursor: pointer;
+    border-color: rgb(104, 100, 104);
+  }
+  
+  #submit:hover {
+    background-color: rgb(71, 10, 71);
+    color: white;
+  }
+
   #form p {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 500;
@@ -725,12 +741,27 @@ img {vertical-align: middle;}
   }
 
   .prev, .next,.text {font-size: 11px}
+  
+#submit {
+  background-color: #fff;
+  border-radius: 5px;
+  font-size: 15px;
+  position: static;
+  width: 50%;
+  padding: 5px;
+  cursor: pointer;
+  border-color: rgb(104, 100, 104);
+}
 
+#submit:hover {
+  background-color: rgb(71, 10, 71);
+  color: white;
+}
   #form p {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 500;
     font-style: italic;
-    font-size: 14px;
+    font-size: 16px;
     align-items: column;
     font-optical-sizing: auto
   }
