--- a/Index.css
+++ b/Index.css
@@ -547,11 +547,10 @@ img {vertical-align: middle;}
   }
 
   .prev, .next,.text {font-size: 11px}
-  
+
   #form {
     background-color: rgb(170, 129, 170);
     text-align: center;
-    padding: 10px;
     border-radius: 10px;
     max-width: 500px;
     margin: 0 auto;
@@ -749,6 +748,14 @@ img {vertical-align: middle;}
   }
 
   .prev, .next,.text {font-size: 11px}
+  
+  #form {
+    background-color: rgb(170, 129, 170);
+    text-align: center;
+    border-radius: 10px;
+    max-width: 500px;
+    margin: 0 auto;
+  }
   
 #submit {
   background-color: #fff;
