--- a/Index.css
+++ b/Index.css
@@ -35,6 +35,7 @@ header {
   font-size: 15px;
   color: rgb(255, 255, 255);
   padding: 10px;
+  border-radius: 5px;
   background-color: rgba(77, 10, 80, 0.664);
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
