--- a/Index.css
+++ b/Index.css
@@ -189,10 +189,17 @@ header {
   border-radius: 10px;
   max-width: 500px;
   margin: 0 auto;
+  border: 2px solid rgb(255, 255, 255); 
+  border-radius: 10px;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px; /* Aggiunge spazio interno */
+  width: 500px; /* Imposta la larghezza del form */
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); /* Aggiunge un'ombra */
 }
 
 
-#fname {
+#fname, #lname, #email {
   margin-bottom: 10px;
   background-color: #ffffff;
   padding: 5px;
@@ -200,7 +207,7 @@ header {
   border-radius: 5px;
   font-size: 15px;
   position: static;
-  border-color: rgb(104, 100, 104);
+  border: 1px solid rgb(104, 100, 104);
 }
 
 #form textarea {
@@ -209,10 +216,13 @@ header {
   margin-bottom: 10px;
   background-color: #ffffff;
   padding: 5px;
+  border-radius: 5px;
   width: 70%;
   border-radius: 5px;
   font-size: 15px;
+  border: 1px solid rgb(104, 100, 104);
   position: static;
+  text-align: center;
   border-color: rgb(104, 100, 104);
 }
 
@@ -224,7 +234,7 @@ header {
   width: 50%;
   padding: 5px;
   cursor: pointer;
-  border-color: rgb(104, 100, 104);
+  border: 1px solid rgb(104, 100, 104);
 }
 
 #submit:hover {
@@ -233,13 +243,17 @@ header {
 }
 
 #form p {
+  color: rgb(0, 0, 0);
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: 500;
   font-style: italic;
-  font-size: 20px;
+  font-size: 22px;
+  text-align: center;
   align-items: column;
-  display: flex;
-  font-optical-sizing: auto;
+  margin: 0 auto;
+  width: 100%;
+  word-wrap: break-word;
+  padding-left: 10px
 }
 
 #dovetrovarmi { 
@@ -574,7 +588,18 @@ img {vertical-align: middle;}
     border-radius: 10px;
     max-width: 500px;
     margin: 0 auto;
-  }
+    border:#130311;
+    border: 2px solid rgb(255, 255, 255); /* Imposta il bordo */
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px; /* Aggiunge spazio interno */
+    width: 500px; /* Imposta la larghezza del form */
+    margin: 0 auto; /* Centra il form orizzontalmente */
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); /* Aggiunge un'ombra */
+    border-radius: 10px; 
+  } 
+
+
   #submit {
     background-color: #fff;
     border-radius: 5px;
@@ -592,18 +617,22 @@ img {vertical-align: middle;}
   }
 
   #form p {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 500;
-    font-style: italic;
-    font-optical-sizing: auto;
-    font-size: 18px;
-    align-items: column;
-    display: flex;
+  color: white;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 500;
+  font-style: italic;
+  font-size: 22px;
+  text-align: center;
+  margin: 0 auto;
+  width: 100%;
+  word-wrap: break-word;
+  padding-left: 10px
   }
-
-}
  
 }
+
+}
+
 
 
 @media (max-width: 480px) {
@@ -774,13 +803,23 @@ img {vertical-align: middle;}
 
   .prev, .next,.text {font-size: 11px}
   
+  
   #form {
     background-color: rgb(170, 129, 170);
     text-align: center;
     border-radius: 10px;
     max-width: 500px;
     margin: 0 auto;
-  }
+    border:#130311;
+    border: 2px solid rgb(255, 255, 255); /* Imposta il bordo */
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px; /* Aggiunge spazio interno */
+    width: 50px; /* Imposta la larghezza del form */
+    margin: 0 auto; /* Centra il form orizzontalmente */
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); /* Aggiunge un'ombra */
+    border-radius: 10px; 
+  } 
 
 #submit {
   background-color: #fff;
@@ -798,13 +837,18 @@ img {vertical-align: middle;}
   color: white;
 }
   #form p {
+    color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 500;
     font-style: italic;
-    font-size: 14px;
+    font-size: 15px;
     align-items: column;
     font-optical-sizing: auto;
     display: flex;
+   justify-content: center;
+   text-align: center;
+   word-wrap: break-word;
+   margin: 0 auto;
   }
 
 }
