--- a/Index.css
+++ b/Index.css
@@ -187,17 +187,13 @@ header {
   background-color: rgb(170, 129, 170);
   text-align: center;
   border-radius: 10px;
-  max-width: 500px;
   margin: 0 auto;
   border: 2px solid rgb(255, 255, 255); 
-  border-radius: 10px;
-  padding-top: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px; /* Aggiunge spazio interno */
-  width: 500px; /* Imposta la larghezza del form */
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); /* Aggiunge un'ombra */
+  padding: 20px;
+  width: 80%;
+  max-width: 500px; 
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); 
 }
-
 
 #fname, #lname, #email {
   margin-bottom: 10px;
@@ -206,31 +202,25 @@ header {
   width: 70%;
   border-radius: 5px;
   font-size: 15px;
-  position: static;
   border: 1px solid rgb(104, 100, 104);
 }
 
 #form textarea {
   font-family: Arial, Helvetica, sans-serif;
-  width: 100%;
+  width: 70%;
   margin-bottom: 10px;
   background-color: #ffffff;
   padding: 5px;
   border-radius: 5px;
-  width: 70%;
-  border-radius: 5px;
   font-size: 15px;
   border: 1px solid rgb(104, 100, 104);
-  position: static;
   text-align: center;
-  border-color: rgb(104, 100, 104);
 }
 
 #submit {
   background-color: #fff;
   border-radius: 5px;
   font-size: 15px;
-  position: static;
   width: 50%;
   padding: 5px;
   cursor: pointer;
@@ -247,13 +237,13 @@ header {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: 500;
   font-style: italic;
-  font-size: 22px;
+  font-size: 20px;
   text-align: center;
-  align-items: column;
   margin: 0 auto;
-  width: 100%;
   word-wrap: break-word;
-  padding-left: 10px
+  padding-left: 10px;
+  padding-right: 10px;
+  width: calc(100% - 20px);
 }
 
 #dovetrovarmi { 
@@ -589,11 +579,9 @@ img {vertical-align: middle;}
     max-width: 500px;
     margin: 0 auto;
     border: 2px solid rgb(255, 255, 255); /* Imposta il bordo */
-    padding-top: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px; /* Aggiunge spazio interno */
-    width: 500px; /* Imposta la larghezza del form */
-    margin: 0 auto; /* Centra il form orizzontalmente */
+    padding: 15px;
+    width: 90%;
+    margin: 0 auto;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); /* Aggiunge un'ombra */
     border-radius: 10px; 
   } 
@@ -620,12 +608,13 @@ img {vertical-align: middle;}
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: 500;
   font-style: italic;
-  font-size: 22px;
+  font-size: 18px;
   text-align: center;
   margin: 0 auto;
-  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: calc(100% - 30px);
   word-wrap: break-word;
-  padding-left: 10px
   }
  
 }
@@ -807,14 +796,11 @@ img {vertical-align: middle;}
     background-color: rgb(170, 129, 170);
     text-align: center;
     border-radius: 10px;
-    max-width: 500px;
     margin: 0 auto;
     border: 2px solid rgb(255, 255, 255); /* Imposta il bordo */
-    padding-top: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px; /* Aggiunge spazio interno */
-    width: 50px; /* Imposta la larghezza del form */
-    margin: 0 auto; /* Centra il form orizzontalmente */
+    padding: 10px;
+    width: 95%;
+    margin: auto; /* Centra il form orizzontalmente */
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); /* Aggiunge un'ombra */
     border-radius: 10px; 
   } 
@@ -839,14 +825,17 @@ img {vertical-align: middle;}
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 500;
     font-style: italic;
-    font-size: 15px;
+    font-size: 16px;
     align-items: column;
     font-optical-sizing: auto;
     display: flex;
-   justify-content: center;
-   text-align: center;
-   word-wrap: break-word;
-   margin: 0 auto;
+    justify-content: center;
+    text-align: center;
+    word-wrap: break-word;
+    margin: 0 auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: calc(100% - 20px);
   }
 
 }
