--- a/Index.css
+++ b/Index.css
@@ -187,7 +187,7 @@ header {
   background-color: rgb(170, 129, 170);
   text-align: center;
   border-radius: 10px;
-  margin: 0 auto;
+  margin: 0;
   border: 2px solid rgb(255, 255, 255); 
   padding: 20px;
   width: 80%;
@@ -577,11 +577,10 @@ img {vertical-align: middle;}
     text-align: center;
     border-radius: 10px;
     max-width: 500px;
-    margin: 0 auto;
+    margin: 0;
     border: 2px solid rgb(255, 255, 255); /* Imposta il bordo */
     padding: 15px;
     width: 90%;
-    margin: 0 auto;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); /* Aggiunge un'ombra */
     border-radius: 10px; 
   } 
@@ -796,11 +795,10 @@ img {vertical-align: middle;}
     background-color: rgb(170, 129, 170);
     text-align: center;
     border-radius: 10px;
-    margin: 0 auto;
+    margin: 0;
     border: 2px solid rgb(255, 255, 255); /* Imposta il bordo */
     padding: 10px;
     width: 95%;
-    margin: auto; /* Centra il form orizzontalmente */
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); /* Aggiunge un'ombra */
     border-radius: 10px; 
   } 
