--- a/Index.css
+++ b/Index.css
@@ -170,6 +170,7 @@ header {
   padding-left: 20%;
   padding-right: 20%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  margin: 0;
 }
 
 .info a {
@@ -247,7 +248,10 @@ header {
 }
 
 #dovetrovarmi { 
-margin: 20px;
+margin-top: 20px;
+margin-bottom: 20px; 
+padding-left: 10px;
+padding-right: 10px;
 }
 
 
@@ -489,6 +493,7 @@ img {vertical-align: middle;}
   .info {
     flex-direction: column;
     text-align: center;
+    margin: 0;
    } 
 
   .button {
@@ -702,6 +707,7 @@ img {vertical-align: middle;}
 .info {
  flex-direction: column;
  text-align: center;
+ margin: 0;
 } 
 
 .chisono img {
